k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  namespace: softaren-poc
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: poc.softaren.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ae-sample-identity-webapp-clusterip-svc
                port:
                  number: 80
